# LeanLatex

./: README.md  pyproject.toml
code_latex/: __init__.py  codelatex.py
code_latex/figures/: template.typ
lean_latex/: __init__.py  leanlatex.py
lean_latex/figures/: template.typ
