[project]
authors = [
  { name = "Gaëtan Serré", email = "gaetan.serre@ens-paris-saclay.fr" },
]
maintainers = [
  { name = "Gaëtan Serré", email = "gaetan.serre@ens-paris-saclay.fr" },
]
name = "lean_latex"
dependencies = []
description = "A LaTeX preprocessor for Lean code"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "lean_latex.__version__" }

[tool.setuptools.packages.find]
include = ["lean_latex"]

[tool.setuptools.package-data]
lean_latex = ["figures/**"]

[project.urls]
Repository = "https://github.com/gaetanserre/lean_latex"

[project.scripts]
lean_latex = "lean_latex.leanlatex:main"

[build-system]
requires = ["setuptools", "toml"]
