[project]
authors = [
  { name = "Gaëtan Serré", email = "gaetan.serre@ens-paris-saclay.fr" },
]
maintainers = [
  { name = "Gaëtan Serré", email = "gaetan.serre@ens-paris-saclay.fr" },
]
name = "code_latex"
dependencies = []
description = "A LaTeX preprocessor for code blocks"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "code_latex.__version__" }

[tool.setuptools.packages.find]
include = ["code_latex"]

[tool.setuptools.package-data]
code_latex = ["figures/**"]

[project.urls]
Repository = "https://github.com/gaetanserre/lean_latex"

[project.scripts]
code_latex = "code_latex.codelatex:main"

[build-system]
requires = ["setuptools", "toml"]
